--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "delivery-app-frontend",
   "version": "0.1.0",
+  "homepage": "https://kachdar.github.io/DeliveryApp-Frontend/",
   "private": true,
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.15.2",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
